force-app/main/default/objects/Student_Accounts__x/Student_Accounts__x.object-meta.xml
<CustomObject>
    <description>Student Account Balances</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_FA_ACCBAL_Vs</externalName>
    <label>Student Account (external)</label>
    <pluralLabel>Student Account (external)</pluralLabel>
</CustomObject>