force-app/main/default/objects/Student_Accounts__x/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <description>Current Student Account Balance</description>
    <externalDeveloperName>ACCOUNT_BALANCE</externalDeveloperName>
    <label>Current Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>