force-app/main/default/objects/Student_Accounts__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact related to student account</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>12</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Accounts (external)</relationshipLabel>
    <relationshipName>Student_Accounts1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>