force-app/main/default/objects/Student_Accounts__x/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <description>Student Credit Balance</description>
    <externalDeveloperName>ASU_CREDIT_BALANCE</externalDeveloperName>
    <label>Credit Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>