force-app/main/default/objects/Student_Accounts__x/fields/Direct_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Student Chose Direct Deposit</description>
    <externalDeveloperName>DIR_DEPOSIT_LINK</externalDeveloperName>
    <label>Direct Deposit</label>
    <type>Checkbox</type>
</CustomField>