force-app/main/default/objects/Student_Accounts__x/fields/Future_Balance__c.field-meta.xml
<CustomField>
    <fullName>Future_Balance__c</fullName>
    <description>Pending Student Balance</description>
    <externalDeveloperName>ASU_FUTURE_BALANCE</externalDeveloperName>
    <label>Future Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>